--- a/src/Payroll.API/Payroll.API.csproj
+++ b/src/Payroll.API/Payroll.API.csproj
@@ -16,6 +16,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.8" />
 
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
